
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {unsigned char const* l98; scalar_t__ l160; scalar_t__ l129; } ;
typedef TYPE_1__ l163 ;



__attribute__((used)) static unsigned short l695(l163*l37,const unsigned
char*l98){unsigned short w;w= *l98++;w|= *l98++<<8;l37->l98=l98;l37->
l129=0;l37->l160=0;return w;}
